Phonebook App Complete

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,8 +2,15 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
+//Font Awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+
+
 // Variables
 @import "variables";
 
+
+@import "node_modules/normalize.css/normalize";
 // Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap";
+
